--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,8 @@
 body {
   margin: 0;
   font-family: 'Inter', sans-serif;
-  background-color: #061830;
+  background-color: #0A56A0B2;
+  ;
 }
 
 * {
